@@ -165,6 +165,10 @@ dataset with fewer examples and a greater bias.
 +---------------+---------------------------------------+
 | DECOMP2       | DECOMP(method='PCA')                  |
 +---------------+---------------------------------------+
+| DECOMP3       | DECOMP(method='GRP')                  |
++---------------+---------------------------------------+
+| DECOMP4       | DECOMP(method='SRP')                  |
++---------------+---------------------------------------+
 | DSN1          | DSN(metric='JS')                      |
 +---------------+---------------------------------------+
 | DSN2          | DSN(metric='WS')                      |
